Fixed bottom being cut off on phones

--- a/dev/css/app.css
+++ b/dev/css/app.css
@@ -25,6 +25,10 @@ span.connect {
 
 
 
+footer{
+	padding-bottom: 50px;
+}
+
 .icon-grid a{
 	color:black;
 }
